--- a/webCMC/webCMC_project/suivi/templates/suivi/affaire.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/affaire.html
@@ -58,6 +58,46 @@
 <br>
 
 <div class="container">
+    <h2>Contact</h2>
+    <table class="table table-hover table-bordered">
+        <thead class="table-dark">
+            <tr>
+                <th>Nom</th>
+                <th>Téléphone</th>
+                <th>Email</th>
+                {% if perms.suivi.change_contact %}
+                <th>Modifier</th>
+                {% endif %}
+                {% if perms.suivi.delete_contact %}
+                <th>Supprimer</th>
+                {% endif %}
+            </tr>
+        </thead>
+        <tbody>
+            {% for contact in contacts %}
+            <tr>
+                <td>{{contact.name}}</td>
+                <td>{{contact.telephone}}</td>
+                <td>{{contact.email}}</td>
+                {% if perms.suivi.change_contact %}
+                <td><a class="btn btn-outline-warning" href="{% url 'editContact' contact.id %}">Modifier</a></td>
+                {% endif %}
+                {% if perms.suivi.delete_contact %}
+                <td><a class="btn btn-outline-danger" href="{% url 'deleteContact' contact.id %}">Supprimer</a></td>
+                {% endif %}
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+    {% if perms.suivi.add_contact %}
+    <a class="btn btn-outline-primary" href="{% url 'createContact' affaire.id %}">Créer une facture</a>
+    {% endif %}
+</div>
+<div class="container">
+
+<br>
+
+<div class="container">
         <h2>Factures</h2>
         <table class="table table-hover table-bordered">
             <thead class="table-dark">
