--- a/webCMC/webCMC_project/suivi/templates/suivi/ensemble.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/ensemble.html
@@ -18,7 +18,7 @@
     </div>
     <br>
     <div>
-        <a class="btn btn-primary" href="{% url 'ensembleAvancement' ensemble.id %}">Voir la nomenclature</a>
+        <a class="btn btn-primary" href="{% url 'ensembleAvancement' ensemble.id 'Avancement' %}">Voir la nomenclature</a>
     </div>
 </div>
 <br>
