--- a/webCMC/webCMC_project/suivi/templates/suivi/ensembleAvancement.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/ensembleAvancement.html
@@ -62,13 +62,13 @@
                     {% endif %}
                         
                         {% if dicoAv|get_item:sousEnsemble|get_item:usinage == '0' %}
-                            <img src="{% static 'redcross.png' %}" width="auto" height="10" alt="0"></a>
+                            <img src="{{ static 'redcross.png' }}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:usinage == 'EC' %}
-                            <img src="{% static 'orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
+                            <img src="{{ static 'orange_dash.png' }}" width="auto" height="10" alt="EC"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:usinage == 'TR' %}
-                            <img src="{% static 'green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
+                            <img src="{{ static 'green_checkmark.png' }}" width="auto" height="10" alt="TR"></a>
                         {% endif %}
                     </td>
                     {% if dicoAv|get_item:sousEnsemble|get_item:debitscie == '0' %}
@@ -81,13 +81,13 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:debitscie == '0' %}
-                            <img src="{% static 'redcross.png' %}" width="auto" height="10" alt="0"></a>
+              {             <img src="{{ static 'redcross.png' }}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:debitscie == 'EC' %}
-                            <img src="{% static 'orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
+                            <img src="{{ static 'orange_dash.png' }}" width="auto" height="10" alt="EC"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:debitscie == 'TR' %}
-                            <img src="{% static 'green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
+                            <img src="{{ static 'green_checkmark.png' }}" width="auto" height="10" alt="TR"></a>
                         {% endif %}
                     </td>
                     {% if dicoAv|get_item:sousEnsemble|get_item:debitcn == '0' %}
@@ -100,13 +100,13 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:debitcn == '0' %}
-                            <img src="{% static 'redcross.png' %}" width="auto" height="10" alt="0"></a>
+              {             <img src="{{ static 'redcross.png' }}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:debitcn == 'EC' %}
-                        <img src="{% static 'orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
+                        <img src="{{ static 'orange_dash.png' }}" width="auto" height="10" alt="EC"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:debitcn == 'TR' %}
-                        <img src="{% static 'green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
+                        <img src="{{ static 'green_checkmark.png' }}" width="auto" height="10" alt="TR"></a>
                         {% endif %}
                     </td>
                     {% if dicoAv|get_item:sousEnsemble|get_item:fabrication == '0' %}
@@ -119,13 +119,13 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:fabrication == '0' %}
-                            <img src="{% static 'redcross.png' %}" width="auto" height="10" alt="0"></a>
+              {             <img src="{{ static 'redcross.png' }}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:fabrication == 'EC' %}
-                            <img src="{% static 'orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
+                            <img src="{{ static 'orange_dash.png' }}" width="auto" height="10" alt="EC"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:fabrication == 'TR' %}
-                            <img src="{% static 'green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
+                            <img src="{{ static 'green_checkmark.png' }}" width="auto" height="10" alt="TR"></a>
                         {% endif %}
                     </td>
                     {% if dicoAv|get_item:sousEnsemble|get_item:ajustage == '0' %}
@@ -138,13 +138,13 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:ajustage == '0' %}
-                            <img src="{% static 'redcross.png' %}" width="auto" height="10" alt="0"></a>
+              {             <img src="{{ static 'redcross.png' }}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:ajustage == 'EC' %}
-                            <img src="{% static 'orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
+                            <img src="{{ static 'orange_dash.png' }}" width="auto" height="10" alt="EC"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:ajustage == 'TR' %}
-                            <img src="{% static 'green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
+                            <img src="{{ static 'green_checkmark.png' }}" width="auto" height="10" alt="TR"></a>
                         {% endif %}
                     </td>
                     {% if dicoAv|get_item:sousEnsemble|get_item:peinture == '0' %}
@@ -157,13 +157,13 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:peinture == '0' %}
-                            <img src="{% static 'redcross.png' %}" width="auto" height="10" alt="0"></a>
+              {             <img src="{{ static 'redcross.png' }}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:peinture == 'EC' %}
-                            <img src="{% static 'orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
+                            <img src="{{ static 'orange_dash.png' }}" width="auto" height="10" alt="EC"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:peinture == 'TR' %}
-                            <img src="{% static 'green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
+                            <img src="{{ static 'green_checkmark.png' }}" width="auto" height="10" alt="TR"></a>
                         {% endif %}
                     </td>
                     {% if dicoAv|get_item:sousEnsemble|get_item:livraison == '0' %}
@@ -176,13 +176,13 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:livraison == '0' %}
-                            <img src="{% static 'redcross.png' %}" width="auto" height="10" alt="0"></a>
+              {             <img src="{{ static 'redcross.png' }}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:livraison == 'EC' %}
-                            <img src="{% static 'orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
+                            <img src="{{ static 'orange_dash.png' }}" width="auto" height="10" alt="EC"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:livraison == 'TR' %}
-                            <img src="{% static 'green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
+                            <img src="{{ static 'green_checkmark.png' }}" width="auto" height="10" alt="TR"></a>
                         {% endif %}
                     </td>
                     {% if perms.suivi.change_avancement %}
@@ -205,13 +205,13 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:piece|get_item:usinage == '0' %}
-                            <img src="{% static 'redcross.png' %}" width="auto" height="10" alt="0"></a>
+              {             <img src="{{ static 'redcross.png' }}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:usinage == 'EC' %}
-                            <img src="{% static 'orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
+                            <img src="{{ static 'orange_dash.png' }}" width="auto" height="10" alt="EC"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:usinage == 'TR' %}
-                            <img src="{% static 'green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
+                            <img src="{{ static 'green_checkmark.png' }}" width="auto" height="10" alt="TR"></a>
                         {% endif %}
                     </td>
                     {% if dicoAv|get_item:piece|get_item:debitscie == '0' %}
@@ -224,13 +224,13 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:piece|get_item:debitscie == '0' %}
-                            <img src="{% static 'redcross.png' %}" width="auto" height="10" alt="0"></a>
+              {             <img src="{{ static 'redcross.png' }}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:debitscie == 'EC' %}
-                            <img src="{% static 'orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
+                            <img src="{{ static 'orange_dash.png' }}" width="auto" height="10" alt="EC"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:debitscie == 'TR' %}
-                            <img src="{% static 'green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
+                            <img src="{{ static 'green_checkmark.png' }}" width="auto" height="10" alt="TR"></a>
                         {% endif %}
                     </td>
                     {% if dicoAv|get_item:piece|get_item:debitcn == '0' %}
@@ -243,13 +243,13 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:piece|get_item:debitcn == '0' %}
-                            <img src="{% static 'redcross.png' %}" width="auto" height="10" alt="0"></a>
+              {             <img src="{{ static 'redcross.png' }}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:debitcn == 'EC' %}
-                        <img src="{% static 'orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
+                        <img src="{{ static 'orange_dash.png' }}" width="auto" height="10" alt="EC"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:debitcn == 'TR' %}
-                        <img src="{% static 'green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
+                        <img src="{{ static 'green_checkmark.png' }}" width="auto" height="10" alt="TR"></a>
                         {% endif %}
                     </td>
                     {% if dicoAv|get_item:piece|get_item:fabrication == '0' %}
@@ -262,13 +262,13 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:piece|get_item:fabrication == '0' %}
-                            <img src="{% static 'redcross.png' %}" width="auto" height="10" alt="0"></a>
+              {             <img src="{{ static 'redcross.png' }}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:fabrication == 'EC' %}
-                            <img src="{% static 'orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
+                            <img src="{{ static 'orange_dash.png' }}" width="auto" height="10" alt="EC"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:fabrication == 'TR' %}
-                            <img src="{% static 'green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
+                            <img src="{{ static 'green_checkmark.png' }}" width="auto" height="10" alt="TR"></a>
                         {% endif %}
                     </td>
                     {% if dicoAv|get_item:piece|get_item:ajustage == '0' %}
@@ -281,13 +281,13 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:piece|get_item:ajustage == '0' %}
-                            <img src="{% static 'redcross.png' %}" width="auto" height="10" alt="0"></a>
+              {             <img src="{{ static 'redcross.png' }}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:ajustage == 'EC' %}
-                            <img src="{% static 'orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
+                            <img src="{{ static 'orange_dash.png' }}" width="auto" height="10" alt="EC"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:ajustage == 'TR' %}
-                            <img src="{% static 'green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
+                            <img src="{{ static 'green_checkmark.png' }}" width="auto" height="10" alt="TR"></a>
                         {% endif %}
                     </td>
                     {% if dicoAv|get_item:piece|get_item:peinture == '0' %}
@@ -300,13 +300,13 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:piece|get_item:peinture == '0' %}
-                            <img src="{% static 'redcross.png' %}" width="auto" height="10" alt="0"></a>
+              {             <img src="{{ static 'redcross.png' }}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:peinture == 'EC' %}
-                            <img src="{% static 'orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
+                            <img src="{{ static 'orange_dash.png' }}" width="auto" height="10" alt="EC"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:peinture == 'TR' %}
-                            <img src="{% static 'green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
+                            <img src="{{ static 'green_checkmark.png' }}" width="auto" height="10" alt="TR"></a>
                         {% endif %}
                     </td>
                     {% if dicoAv|get_item:piece|get_item:livraison == '0' %}
@@ -319,13 +319,13 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:piece|get_item:livraison == '0' %}
-                            <img src="{% static 'redcross.png' %}" width="auto" height="10" alt="0"></a>
+              {             <img src="{{ static 'redcross.png' }}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:livraison == 'EC' %}
-                            <img src="{% static 'orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
+                            <img src="{{ static 'orange_dash.png' }}" width="auto" height="10" alt="EC"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:livraison == 'TR' %}
-                            <img src="{% static 'green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
+                            <img src="{{ static 'green_checkmark.png' }}" width="auto" height="10" alt="TR"></a>
                         {% endif %}
                     </td>
                     {% if perms.suivi.change_avancement %}
