--- a/webCMC/webCMC_project/suivi/templates/suivi/pieceAvancement.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/pieceAvancement.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <div class="container">
     <div class="d-flex justify-content-center">
