--- a/webCMC/webCMC_project/suivi/templates/suivi/ensembleAvancement.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/ensembleAvancement.html
@@ -101,13 +101,13 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:debitcn == '0' %}
-              {             <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
+                            <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:debitcn == 'EC' %}
-                        <img src="{% static 'img/orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
+                            <img src="{% static 'img/orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:debitcn == 'TR' %}
-                        <img src="{% static 'img/green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
+                            <img src="{% static 'img/green_checkmark.png' %}" width="auto" height="10" alt="TR"></a>
                         {% endif %}
                     </td>
                     {% if dicoAv|get_item:sousEnsemble|get_item:fabrication == '0' %}
@@ -120,7 +120,7 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:fabrication == '0' %}
-              {             <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
+                            <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:fabrication == 'EC' %}
                             <img src="{% static 'img/orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
@@ -139,7 +139,7 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:ajustage == '0' %}
-              {             <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
+                            <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:ajustage == 'EC' %}
                             <img src="{% static 'img/orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
@@ -158,7 +158,7 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:peinture == '0' %}
-              {             <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
+                            <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:peinture == 'EC' %}
                             <img src="{% static 'img/orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
@@ -177,7 +177,7 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:livraison == '0' %}
-              {             <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
+                            <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:sousEnsemble|get_item:livraison == 'EC' %}
                             <img src="{% static 'img/orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
@@ -206,7 +206,7 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:piece|get_item:usinage == '0' %}
-              {             <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
+                            <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:usinage == 'EC' %}
                             <img src="{% static 'img/orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
@@ -225,7 +225,7 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:piece|get_item:debitscie == '0' %}
-              {             <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
+                           <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:debitscie == 'EC' %}
                             <img src="{% static 'img/orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
@@ -244,7 +244,7 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:piece|get_item:debitcn == '0' %}
-              {             <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
+                           <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:debitcn == 'EC' %}
                         <img src="{% static 'img/orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
@@ -263,7 +263,7 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:piece|get_item:fabrication == '0' %}
-              {             <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
+                           <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:fabrication == 'EC' %}
                             <img src="{% static 'img/orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
@@ -282,7 +282,7 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:piece|get_item:ajustage == '0' %}
-              {             <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
+                           <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:ajustage == 'EC' %}
                             <img src="{% static 'img/orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
@@ -301,7 +301,7 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:piece|get_item:peinture == '0' %}
-              {             <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
+                           <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:peinture == 'EC' %}
                             <img src="{% static 'img/orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
@@ -320,7 +320,7 @@
                         <td style="background-color: #5FBD16;">
                     {% endif %}
                         {% if dicoAv|get_item:piece|get_item:livraison == '0' %}
-              {             <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
+                           <img src="{% static 'img/redcross.png' %}" width="auto" height="10" alt="0"></a>
                         {% endif %}
                         {% if dicoAv|get_item:piece|get_item:livraison == 'EC' %}
                             <img src="{% static 'img/orange_dash.png' %}" width="auto" height="10" alt="EC"></a>
