--- a/webCMC/webCMC_project/suivi/templates/suivi/ensembleAvancement.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/ensembleAvancement.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="d-flex justify-content-center">
 
-        <h1>Affaire: {{affaire.numero}} - {{affaire.chantier}}</h1>
+        <h1>Affaire: {{ensemble.id_affaires.numero}} - {{ensemble.id_affaires.chantier}}</h1>
 
     </div>
 </div>
