--- a/webCMC/webCMC_project/suivi/templates/suivi/ensembleAvancement.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/ensembleAvancement.html
@@ -187,7 +187,7 @@
                         {% endif %}
                     </td>
                     {% if perms.suivi.change_avancement %}
-                    <td><a class="btn btn-outline-warning" href="{% url 'editAvancementSE' dicoAv|get_item:sousEnsemble|get_item:id %}">Modifier</a></td>
+                    <td><a class="btn btn-outline-warning" href="{% url 'editAvancementSE' sousEnsemble.id %}">Modifier</a></td>
                     {% endif %}
                 </tr>
                 {% for piece in dicoAv|get_item:sousEnsemble %}
