--- a/webCMC/webCMC_project/suivi/templates/suivi/ensembleAvancement.html
+++ b/webCMC/webCMC_project/suivi/templates/suivi/ensembleAvancement.html
@@ -46,7 +46,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for sousEnsemble,AvSousEnsemble in sousEnsembles %}
+            {% for sousEnsemble,AvSousEnsemble in sousEnsembles.items %}
                 <tr>
                     <td>{{sousEnsemble.nom}}</td>
                     <td>{{sousEnsemble.numero}}</td>
